# Bridge_GAD_Yogendra_Borse

./: .env.example  .gitignore  .pre-commit-config.yaml  .replit  .vercelignore  ACTION_CHECKLIST.md  APP_INTROSPECTION.md  APP_RUNNING_LOCALLY.md  ARCHITECTURE_AUDIT_PHASE0_1.md  BEFORE_AFTER_COMPARISON.md  BRIDGECANVAS_TRANSFORMATION_PLAN.md  BRIDGE_GAD_SETUP_COMPLETE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CLEAN_STATUS.md  CODE_OF_CONDUCT.md  COMMIT_SUMMARY.md  COMPLETE_SUCCESS_SUMMARY.md  CONTRIBUTING_NEW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  Dockerfile  ENHANCED_BRIDGE_APP_README.md  ENHANCEMENT_SUMMARY.md  EXECUTIVE_SUMMARY.md  EXPERT_ASSESSMENT_AND_STRATEGY.md  EXPERT_COMPETITIVE_ANALYSIS.md  FINAL_CHECKLIST.md  FINAL_ENHANCEMENT_REPORT.md  GITHUB_POLISH_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_RESULTS.md  LAUNCH_ACTION_PLAN.md  LEAN_TRANSFORMATION_PLAN.md  MIGRATION_COMPLETE.md  MULTI_SHEET_FEATURE.md  Makefile  PERFECT_SUCCESS.md  (+91 more)
.streamlit/: config.toml
CUSTOM_SAMPLE_INPUTS/: BridgeGAD-04_bridge_parameters_template.xlsx
F_dir_FILES/: input.xlsx
INDIVIDUAL_TESTS_18_11_2025_1839/: INDIVIDUAL_TESTING_REPORT.json
INDIVIDUAL_TESTS_18_11_2025_1845/: INDIVIDUAL_TESTING_REPORT.json
OUTPUT_16_09_2025_1236/: test_results.json
OUTPUT_18_11_2025_1721/: test_summary.json
OUTPUT_18_11_2025_1732/: test_summary.json
OUTPUT_18_11_2025_1839/: test_summary.json
OUTPUT_18_11_2025_1841/: test_results.json
OUTPUT_18_11_2025_1845/: test_summary.json
OUTPUT_FINAL_18_11_2025_1838/: test_summary.txt
OUTPUT_FINAL_18_11_2025_1844/: test_summary.txt
SAMPLE_INPUT_FILES/: bridge_parameters_comprehensive.xlsx  bridge_parameters_simple.xlsx  input.xlsx  sample_BridgeGAD-03.xlsx  sample_BridgeGAD-06.xlsx  spans_only.xlsx
SAMPLE_INPUT_FILES_FINAL/: BridgeGAD-00_SweetWilledDocument-01.xlsx  BridgeGAD-00_SweetWilledDocument-02.xlsx  BridgeGAD-00_SweetWilledDocument-03.xlsx  BridgeGAD-00_SweetWilledDocument-07.xlsx  BridgeGAD-00_SweetWilledInputFile-01.xlsx  BridgeGAD-00_large_bridge.xlsx  BridgeGAD-00_lisp_params.xlsx  BridgeGAD-00_real_lisp.xlsx  BridgeGAD-00_sample_input.xlsx  Bridge_Slab_Design_Master_Bridge_Design_Template.xlsx
Sample_test_input_files/: basic_bridge_test.xlsx  basic_bridge_test_proper.csv  test_bridge_large_complex_skew.xlsx  test_bridge_medium_multi_span.xlsx  test_bridge_small.xlsx  test_bridge_small_single_span.xlsx  test_lisp_style_input.xlsx  test_minimal_config.xlsx  test_multi_span_bridge_CORRECTED.xlsx  (+2 more)
api/: generate.py
(+91 files in other folders)
