[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-gad"
version = "0.2.0"
description = "Load-balancer migration from Lisp → Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "ezdxf>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
bridge-gad = "bridge_gad.__main__:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
