[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-gad"
version = "0.2.0"
description = "Bridge General Arrangement Drawing Generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "ezdxf>=1.4.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "arq>=0.25.0",
    "matplotlib>=3.7.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.1",
    "cairosvg>=2.7.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "xlrd>=2.0.0",
]

[project.scripts]
bridge-gad = "bridge_gad.__main__:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "flake8", "black", "pip-audit"]

# FIX WARP-001: single source of truth for tool config
[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test_ultimate_app.py"]
addopts = "--tb=short"

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503", "E402"]
